# METIS

./: .gitignore  CMakeLists.txt  METIS-config.cmake.in  METISConfig.cmake.in
cmake/: ProjectCompilerSettings.cmake
conf/: gkbuild.cmake
libmetis/: defs.h
programs/: CMakeLists.txt  gpmetis.c  mpmetis.c  ndmetis.c
